# tkstats

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  schema.sql  update.sh
src/: api.php  index.html
src/inc/: statsdb.php
src/js/: main.js
src/style/: main.css
static/: index.html
static/js/: main.js
static/style/: main.css
tests/: test_tkstats_py.py
tkstats/: __init__.py  main.py
updater/: Dockerfile  update.sh
updater/cron/: fetch-stats
